--- a/src/main/resources/templates/timesheets.html
+++ b/src/main/resources/templates/timesheets.html
@@ -10,8 +10,8 @@
 <!--    ISO-8859-9-->
     <meta http-equiv="content-type" content="application/vnd.ms-excel; charset=UTF-8">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 
 </head>
 <body>
