--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -114,7 +114,8 @@ td{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 70%;
+    /*width: 70%;*/
+    width: 80%;
     margin-top: 35px;
     overflow: auto;
 
@@ -125,7 +126,8 @@ td{
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
+    /*width: 60%;*/
+    width: 70%;
     overflow: auto;
 }
 
