--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -109,6 +109,7 @@ td{
 
 }
 
+
 #main_table_admin{
     position: absolute;
     left: 50%;
@@ -116,6 +117,7 @@ td{
     transform: translate(-50%, -50%);
     /*width: 70%;*/
     width: 80%;
+    max-width: 1366px;
     margin-top: 35px;
     overflow: auto;
 
