--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -59,7 +59,7 @@
           <td>[[${customer.status}]]</td>
           <td>
             <a th:href = "@{'/home/customers/edit/' + ${customer.id}}" class="btn btn-outline-primary btn-sm m-1">Edit</a>
-            <a th:href = "@{'/home/customers/delete/' + ${customer.id}}" class="btn btn btn-outline-danger btn-sm m-1">Delete</a>
+<!--             <a th:href = "@{'/home/customers/delete/' + ${customer.id}}" class="btn btn btn-outline-danger btn-sm m-1">Delete</a> -->
           </td>
         </tr>
       </tbody>
