--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -53,14 +53,20 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group row">
+            <div class="form-group row" id="status">
                 <label class="col-sm-4 col-form-label">Status</label>
-                <div class="col-sm-4">
-                    <div class="form-group row">
-                        <input th:field="*{status}" type="radio" name="status" value="A"> Active
+                <div class="col-sm-1 form-group">
+                    <div class="form-check">
+                        <input th:field="*{status}" type="radio" class="form-check-input" name="status" value="A">
+                        <label class="form-check-label" for="status">
+                            Active
+                        </label>
                     </div>
-                    <div class="form-group row">
-                        <input th:field="*{status}" type="radio" name="status" value="P"> Pasive
+                    <div class="form-check">
+                        <input th:field="*{status}" type="radio" class="form-check-input" name="status" value="P">
+                        <label class="form-check-label" for="status">
+                            Pasive
+                        </label>
                     </div>
                 </div>
             </div>
